- Save and restore invalid host name enties for manual proxy configuration. - Properly save and restore the display flag state for showing protocol   in the manual proxy configuration edits.

BUG:287346